force-app/main/default/objects/PPSTN_UserAssignedRole__c/PPSTN_UserAssignedRole__c.object-meta.xml
<CustomObject>
    <label>PPSTN_UserAssignedRole</label>
    <nameField>
        <displayFormat>UAR-{0000}</displayFormat>
        <label>SFUserAssignedRole</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPSTN_UserAssignedRoles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>