force-app/main/default/objects/PPSTN_UserAssignedRole__c/fields/UserAssignedRole__c.field-meta.xml
<CustomField>
    <fullName>UserAssignedRole__c</fullName>
    <externalId>true</externalId>
    <label>UserAssignedRole</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>