force-app/main/default/objects/PPSTN_UserAssignedRole__c/fields/UserRole__c.field-meta.xml
<CustomField>
    <fullName>UserRole__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserRole</label>
    <referenceTo>PPSTN_UserRole__c</referenceTo>
    <relationshipLabel>PPSTN_UserAssignedRoles</relationshipLabel>
    <relationshipName>PPSTN_UserAssignedRoles</relationshipName>
    <type>Lookup</type>
</CustomField>