force-app/main/default/objects/PPSTN_UserAssignedRole__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UserAssignedRole__c</columns>
    <columns>UserRole__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>